# blindbox

./: .gitignore  .readthedocs.yaml  Dockerfile.txt  Hello.txt  README.md  mkdocs.yml  query_fine_tune.py  query_test.py
.github/workflows/: main.yaml  publish.yaml  publish_wheel.yaml  spellcheck.yaml
.github/workflows/config/: config.yml  wordlist.txt
ai_server_example/: .dockerignore  Dockerfile  Makefile  batch_runner.py  blindbox.tf  blindbox.yml  client.py  collators.py  init.sh  main.tf  messages.py  model_store.py  openchatkit_utils.py  serializers.py  server.py  start.sh
client/: README.md  pyproject.toml
client/blindbox/: __init__.py  pyproject.toml  util.py
client/blindbox/ai/: _adapters.py
client/blindbox/blindbox/: __init__.py
client/blindbox/blindbox/ai/: __init__.py  _adapters.py  _attestation.py  audio.py  completion.py  connection.py
client/blindbox/blindbox/requests/: __init__.py  secured_session.py
client/blindbox/command/: builder.py  tests.py
client/blindbox/command/aws-nitro/: aws-nitro.yml
client/blindbox/command/aws-nitro/test-tf/: main.tf
client/blindbox/command/aws-nitro/test_dir/: Dockerfile
client/blindbox/command/azure-sev/: Caddyfile  Dockerfile  sev-init.sh  sev-start.sh  template.gitignore  template.tf  template.yml
client/blindbox/command/azure-sev/attestation/: go.sum  main.go
client/blindbox/command/azure-sev/attestation/attest/: attest.go  maa.go  snp.go
client/blindbox/command/azure-sev/attestation/common/: info.go
client/blindbox/command/azure-sev/attestation/tools/get-snp-report/: fetch5.h  fetch6.h  get-snp-report5.c  get-snp-report6.c  helpers.c  helpers.h  snp-psp.h
client/blindbox/requests/: __init__.py  errors.py  requests.py  secure_session.py  secured_session.py
client/blindbox/tests/: demo_server.py  session.py
client/hello/: cce_policy.txt
client/src/blindbox/: __init__.py
client/src/blindbox/cli/: __init__.py  context.py  logging.py  main.py
client/src/blindbox/cli/templates/azure-amd-sev/: blindbox.yaml  init.sh  main.tf  outputs.tf  providers.tf  variables.tf
client/src/blindbox/requests/: __init__.py
client/tests/: blindbox_coverage.xml  demo_server.py  pythonpath.env  session.py  test_builder.py  test_requests.py  test_secure_session.py
cmd/: builder.py  notice.md  requirements.txt  test.sh  tests.py
cmd/blindbox-cli/: pyproject.toml
cmd/blindbox-cli/blindbox_cli/: blindbox.tf  terraform.py
cmd/test-tf/: .terraform.lock.hcl
docs/: index.md  notebook_seo.sh
docs/docs/: blindai.md
docs/docs/advanced/: deploy-API-server.md
docs/docs/archives/: deploy-API-server.md  under-the-hood.md  why-blindbox.md
docs/docs/concepts/: Trusted_Execution_Environments.md  amd-sev.md  ecosystem.md  nitro-enclaves.md
docs/docs/getting-started/: confidential_computing.md  quick-tour.ipynb  under-the-hood.ipynb  under-the-hood.md  why-blindbox.md
docs/docs/how-to-guides/: deploy-API-server.ipynb  deploy-API-server.md  falcon.md  falcon40b.ipynb  falcon7b.ipynb  openai-whisper.ipynb  prepare-app.ipynb  santacoder.ipynb
docs/docs/past-projects/: blindai.md
docs/docs/security/: attestation.md
docs/docs/tutorials/: integration.ipynb  prepare-app.ipynb
docs/pdoc_template/: head.mako
docs/stylesheets/: extra.css
enclave/: .terraform.lock.hcl  init.sh
examples/: falcon
examples/falcon/: Dockerfile  query_inference.py  server.py
examples/hello-world/: .gitignore  Dockerfile  blindbox.tf  cce_policy.txt  query.py  server.py
examples/santacoder/: Dockerfile  query.py  santacoder.ipynb  server.py
examples/whisper/: .terraform.lock.hcl  Dockerfile  batch_runner.py  cce_policy.txt  messages.py  model_store.py  model_store_requirements.txt  query.py  serializers.py
images/azure-amd-sev/: Dockerfile  build.sh
images/azure-amd-sev/Azure_CVM_Attestation-master/: README.md  build.sh  go.mod  main.go
images/azure-amd-sev/Azure_CVM_Attestation-master/attestation_client/: Logger.h  README.md  Utils.cpp  Utils.h  main.cpp  packages.config  sampleAttestationToken.json
images/blindbox/: Dockerfile  Dockerfile.old  blindbox-image-build.sh  blindbox-image-init.sh
images/blindbox/attestation/: go.mod  main.go
images/blindbox/attestation/attest/: certcache.go
images/blindbox/attestation/common/: http.go
images/blindbox/attestation/tools/get-snp-report/: Makefile  get-snp-report.c  snp-attestation.h  snp-ioctl5.h  snp-ioctl6.h
server/azure-amd-sev/: Dockerfile  install_deps.sh
server/azure-amd-sev/src/: go.mod  main.go
server/azure-amd-sev/src/attestation_client/: AttestationClientApp.cpp  AttestationClientApp.sln  AttestationClientApp.vcxproj  CMakeLists.txt  Logger.cpp
server/azure-amd-sev/src/bootstrapper/: archive.go  bootstrapper.go
