[tool.poetry]
name = "blindbox"
version = "0.1.0"
description = ""
authors = ["Mithril Security <contact@mithrilsecurity.io>"]
readme = "README.md"

[tool.poetry.dependencies]
cbor2 = { version = "^5.4.6", optional = true }
cryptography = { version = "^39.0.2", optional = true }
inquirer = { version = "^3.1", optional = true }
pycose = { version = "^1.0.1", optional = true }
pydantic = { version = "^1.10.7", optional = true }
pyOpenSSL = { version = "^23.1.1", optional = true }
python = "^3.8"
pyyaml = { version = "^6.0", optional = true }
requests = { version = "^2.28.2", optional = true }
rich = { version = "^13.3.5", optional = true }

[tool.poetry.extras]
cli = ["inquirer", "pydantic", "pyyaml", "rich"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
blindbox = 'blindbox.command.builder:main'
