[tool.poetry]
name = "blindbox"
version = "0.1.0"
description = ""
authors = ["Lucas Bourtoule <lucas.bourtoule@mithrilsecurity.io>"]
readme = "README.md"
packages = [{include = "blindbox", from = "src"}]

[tool.poetry.dependencies]
inquirer = { version = "^3.1", optional = true }
pydantic = { version = "^1.10.7", optional = true }
python = "^3.8"
pyyaml = { version = "^6.0", optional = true }
rich = { version = "^13.3.5", optional = true }
typer = { version = "^0.9.0", optional = true }
cryptography = "^39.0.2"
pycose = "^1.0.1"
pyOpenSSL = "^23.1.1"
requests = "^2.28.2"
pyjwt = "^2.7.0"

[tool.poetry.extras]
cli = ["inquirer", "pydantic", "pyyaml", "rich", "typer"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
blindbox = 'blindbox.cli.main:app'
