[tool.poetry]
name = "blindbox"
version = "0.1.0"
description = ""
authors = ["Lucas Bourtoule <lucas.bourtoule@mithrilsecurity.io>"]
readme = "README.md"

[tool.poetry.dependencies]
cbor2 = { version = "^5.4.6", optional = true }
cryptography = { version = "^39.0.2", optional = true }
pycose = { version = "^1.0.1", optional = true }
pydantic = { version = "^1.10.7", optional = true }
pyOpenSSL = { version = "^23.1.1", optional = true }
python = "^3.9"
requests = { version = "^2.28.2", optional = true }

[tool.poetry.extras]
ai = ["cbor2", "cryptography", "pycose", "pydantic", "pyOpenSSL", "requests"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
