[tool.poetry]
name = "blindbox"
version = "0.1.1"
description = ""
authors = ["Mithril Security <contact@mithrilsecurity.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
# cbor2 = "^5.4.6"
# cryptography = "^39.0.2"
# pycose = "^1.0.1"
# pydantic = "^1.10.7"
# pyOpenSSL = "^23.1.1"

[tool.poetry.dev-dependencies]
aiohttp = "3.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
